# formacao-python-dev-DIO

01-fundamentos-python/: app.py  blocos_indentacao.py  operadores_associacao.py  operadores_atrib.py  operadores_comp.py  operadores_identidade.py
01-fundamentos-python/condicionais/: estruturas_condicionais.py  if_aninhado.py
01-fundamentos-python/estruturas_repetição/: break_estrutura.py  for_estrutura.py
01-fundamentos-python/strings/: fatiamento.py  interpolacao.py
02-estruturas-daddos/01 - listas/: 00_declaracao_listas.py  01 - acesso_direto.py  02 - listas_aninhadas.py  06_metodos_listas.py
02-estruturas-daddos/02 - tuplas/: 00 - criacao_tuplas.py
02-estruturas-daddos/03 - conjuntos/: 00 - definicao_conjunto.py  01 - acesso_conjuntos.py  02 - metodos_conjuntos.py
02-estruturas-daddos/04 - dicionarios/: 00 - dicionarios.py  01 - iterarcao.py
02-estruturas-daddos/05 - funcoes/: 03_args_kwargs.py  04_parametros_especiais.py  desafio_animais.py
03-orientação-objetos/: 02_heranca_simples.py  03_heranca_multipla.py
03-orientação-objetos/03-1-polimorfismo/: 01_polimorfismo.py
03-orientação-objetos/03-2-encapsulamento/: 02_propriedades.py  (+1 more)
07-api-flask/: main.py
api_tarefas_flask/: main.py
api_twitter/: pyproject.toml  secrets.py
dev_api/: main.py
encapsulamento/: 01_encapsulamento.py  02_propriedades.py  02_propriedades_pessoa.py
fundamentos-python/: operadores.py  operadores_logicos.py
generate-hases/: gerar_hashes.py
orientação-objetos/: 01_desafio_bicicletaria.py
primeira_api/: main.py
threads-ips/: ips.py  threads.py
(+38 files in other folders)
