[tool.poetry]
name = "api-twitter"
version = "0.1.0"
description = "teste API twitter"
authors = ["Paulo Jonas <pjonas21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
fastapi = "^0.109.0"
pymongo = "^4.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
